[gd_scene load_steps=2 format=3 uid="uid://dxvih1wj5kvam"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_t8fv6"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t8fv6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.83, 0.83, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="ResumeGame" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Reusme Game"

[node name="Settings" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="GridContainer/ResumeGame" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="GridContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
